--- a/css/pages_stylesheet/dashboard.css
+++ b/css/pages_stylesheet/dashboard.css
@@ -59,3 +59,30 @@ font-weight: bold;
 font-size: 2.5rem;
 
 }
+
+.user-card .card-header{
+background-color: rgb(0, 153, 255);
+-webkit-text-fill-color: white;
+
+}
+
+.category-card .card-header{
+  background-color:  rgb(242, 214, 7);
+  -webkit-text-fill-color: white;
+  
+}
+
+.brand-card .card-header{
+  background-color:  rgb(176, 120, 0);
+  -webkit-text-fill-color: white;
+  
+  }
+
+
+.total-items-card .card-header{
+  background-color:  rgb(0, 223, 82);
+  -webkit-text-fill-color: white;
+    
+}
+  
+  
